change routes, add user MW
