# routes/user.js
@@ -1,0 +1,33 @@
+module.exports = app => {
+
+    app.post('/user/login', (req, res, next) => {
+
+    });
+
+    app.post('/user/logout', (req, res, next) => {
+
+    });
+
+    app.post('/user/signup', (req, res, next) => {
+
+    });
+
+    /**
+     * Get all users
+     */
+    app.get('/user/all', (req, res, next) => {
+
+    });
+
+    app.get('/user/:username', (req, res, next) => {
+
+    });
+
+    app.put('/user', (req, res, next) => {
+
+    });
+
+    app.delete('/user', (req, res, next) => {
+
+    });
+};
